--- a/games-ecommerce/src/app/components/game-card/game-card.component.html
+++ b/games-ecommerce/src/app/components/game-card/game-card.component.html
@@ -12,7 +12,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-icon-button>
+            <button mat-icon-button (click)="warnParentAboutItemAddition(game)">
                 <mat-icon>
                     add_shopping_cart
                 </mat-icon>
