--- a/games-ecommerce/src/app/pages/game-catalog/game-catalog.component.html
+++ b/games-ecommerce/src/app/pages/game-catalog/game-catalog.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     @for(gameObj of gamesArray; track gameObj.id) {
-        <app-game-card [game]="gameObj"></app-game-card>
+        <app-game-card [game]="gameObj" (warnGameCatalog)="warnParentAboutItemAddition($event)"></app-game-card>
     } 
     @empty {
         <h2>Não há jogos registrados no momento!</h2>
